Changes in Verson 1.4.5
  o Added the 'flow' function to make flow plots
  o Added the 'vein' function to make vein plots
  o Fade now accepts numeric values, setting the exact fading (per edge)
  o Added theme = "gimme", defaulting to posCol = "red", negCol = "blue", parallelEdge = TRUE and fade = FALSE
  o Added argument title.cex

Changes in Version 1.4.4
  o Fixed a bug in EBICglasso in which only nLambda = 100 was supported
  o EBICglasso now gives a warning if the densest (lowest lambda) network is selected
  o EBICglasso now gives a message if the empty network is selected
  o qgraph() now supports 'gamma' as alias for 'tuning'
  o qgraph() now has a lambda.min.ratio argument to control the same argument in EBICglasso
  o Fixed a bug in which pie charts were not drawn with > 50 nodes
  o Re-enabled support for BDgraph
  o qgraph no longer warns for when using hidden arguments in semPlot
 
Changes in Version 1.4.3
  o Fixed a bug in which 'curveScaleNodeCorrection' defaulted to FALSE instead of TRUE
  o qgraph() now gives a warning if the user uses a not-documented argument.
  o Fixed a bug in computing baseline DF of ggmFit
  o ggmFit now has an argument for number of parameters
  o Fixed a bug in computing baseline chi-square of ggmFit
  o ggmFit now scales pcor matrix to match diagonal of var-cov matrix rather than diagonal of inverse var-cov matrix
  o Using EBICglasso with returnAllResults now returns 'optwi' as well

Changes in Version 1.4.2
  o centrality_auto no longer outputs igraph messages to the console
  o Added theme option "gray" for grayscale figures
    o Automatically makes negative edges dashed
  o Added 'negDashed' argument to make negative edges dashed
  o bootnet getWmat method now takes signed and weighted into account
  o Centrality functions now have arguments weighted and signed to compute centrality based on the signed or unweighted graph
  o Fixed a bug with refit = TRUE

Changes in Version 1.4.1